--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,14 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <include layout="@layout/app_bar_layout" android:id="@+id/register_toolbar"/>
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/reg_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/reg_email"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/password"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="300dp" />
@@ -25,9 +28,9 @@
         android:layout_below="@+id/reg_display_name"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/email"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="215dp" />
@@ -46,9 +49,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/reg_password"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@android:color/black"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="@string/create_account"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="368dp" />
 
@@ -56,9 +64,24 @@
         android:id="@+id/reg_display_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="103dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/display_name" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/register_toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Create a New Account"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 </RelativeLayout>
