--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".LoginActivity">
 
-    <include layout="@layout/app_bar_layout" android:id="@+id/register_toolbar"/>
-
+    <include layout="@layout/app_bar_layout" android:id="@+id/login_toolbar"/>
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/login_password"
         android:layout_width="match_parent"
@@ -26,12 +25,13 @@
         android:id="@+id/login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/reg_display_name"
+        android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="22dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,33 +57,20 @@
         android:background="@android:color/black"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:text="@string/create_account"
+        android:text="Login"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="368dp" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/reg_display_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/display_name" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/register_toolbar"
+        android:layout_below="@id/login_toolbar"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="Create a New Account"
+        android:text="Login to your account"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 </RelativeLayout>
