--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#673bb7</color>
-    <color name="colorPrimaryDark">#512da7</color>
+    <color name="colorPrimary">#673BB7</color>
+    <color name="colorPrimaryDark">#512DA7</color>
     <color name="colorAccent">#FF5521</color>
 </resources>
