--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -35,7 +35,7 @@
         android:textColor="@android:color/white" />
 
     <Button
-        android:id="@+id/start_log_in_btn"
+        android:id="@+id/start_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
