--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -63,7 +63,7 @@
         android:layout_below="@+id/settings_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:text="Hi There, I am Kraken chat!"
+        android:text="@string/default_status"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
